--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,9 @@
     <title>Vite WebGpu</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="canvas-container">
+      <canvas width="500" height="500"></canvas>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
